# devmind

./: .env.example  .gitignore  README.md  pyproject.toml
devmind/: __init__.py  cli.py  config.py
devmind/agent/: __init__.py  graph.py  simple_agent.py  state.py
devmind/embeddings/: __init__.py  local.py
devmind/indexer/: __init__.py  chunkers.py  code_indexer.py  metadata.py
devmind/llm/: __init__.py  base.py  deterministic.py  factory.py  openai_provider.py  prompts.py  schemas.py
devmind/tools/: __init__.py  file_inspector.py  hybrid_search.py  keyword_search.py  path_search.py  semantic_search.py
tests/: test_agent_graph.py  test_chunkers.py  test_config.py  test_index_and_search.py  test_openai_provider.py
