[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "devmind"
version = "0.1.0"
description = "Agentic codebase understanding tool with source-grounded retrieval."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
agent = ["langgraph>=0.2", "langchain-core>=0.3"]
dev = ["pytest>=8.0"]

[project.scripts]
devmind = "devmind.cli:main"

[tool.setuptools.packages.find]
include = ["devmind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

